--- a/Task 2/style.css
+++ b/Task 2/style.css
@@ -98,33 +98,33 @@ p {
     width: 100%;
 }
 
-.gridcontainer {
+.moviecontainer {
     border: 2px solid #4DCCBD;
     box-shadow: 0px 0px 50px #4DCCBD;
     box-shadow: 10px 10px 10px #4DCCBD;
     background-color: #070410;
 }
 
-.gridcontainer h1 {
+.moviecontainer h1 {
     font-size: 3em;
     color: #EEF36A;
     text-shadow: 4px 2px 4px #4DCCBD;
 }
 
-.gridcontainer p {
+.moviecontainer p {
     font-size: 1.5em;
     margin-bottom: 16px;
     color: #FFF;
     text-shadow: 2px 2px 5px#ffff;
 }
 
-.gridcontainer img {
+.moviecontainer img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.gridcontent {
+.containercontent {
     padding: 16px;
     display: flex;
     flex-direction: column;
@@ -149,53 +149,53 @@ p {
     text-shadow: 0px 0px 20px #EEF36A;
 }
 
-.gridcontainer:nth-child(1) {
+.moviecontainer:nth-child(1) {
     grid-column: span 2 / span 2;
 }
 
-.gridcontainer:nth-child(1) img {
+.moviecontainer:nth-child(1) img {
     width: 100%;
     height: 350px;
     object-fit: cover;
 }
 
-.gridcontainer:nth-child(1) .gridcontent {
+.moviecontainer:nth-child(1) .containercontent {
     display: flex;
     flex-direction: row;
 }
 
-.gridcontainer:nth-child(1) .gridcontent button {
+.moviecontainer:nth-child(1) .containercontent button {
     width: 90%;
     font-size: 3em;
 }
 
-.gridcontainer:nth-child(2) {
+.moviecontainer:nth-child(2) {
     grid-column: span 1;
     display: grid;
     grid-template-rows: auto 1fr;
 }
 
-.gridcontainer:nth-child(3) {
+.moviecontainer:nth-child(3) {
     grid-column: span 1;
     display: grid;
     grid-template-rows: auto 1fr;
 }
 
-.gridcontainer:nth-child(4) {
+.moviecontainer:nth-child(4) {
     grid-column: span 2 / span 2;
     grid-row-start: 3;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 }
 
-.gridcontainer:nth-child(5) {
+.moviecontainer:nth-child(5) {
     grid-column: span 2 / span 2;
     grid-row-start: 4;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 }
 
-.gridcontainer:nth-child(6) {
+.moviecontainer:nth-child(6) {
     grid-column: span 2 / span 2;
     grid-row-start: 5;
     display: grid;
@@ -216,47 +216,47 @@ p {
         margin-bottom: 36px;
     }
 
-    .gridcontent {
+    .containercontent {
         padding: 16px;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
     }
 
-    .gridcontainer:nth-child(1) {
+    .moviecontainer:nth-child(1) {
         grid-column: span 1;
         display: grid;
         grid-template-rows: auto 1fr;
     }
 
-    .gridcontainer:nth-child(1) img {
+    .moviecontainer:nth-child(1) img {
         width: 100%;
         height: 100%;
         object-fit: cover;
     }
 
-    .gridcontainer:nth-child(1) .gridcontent {
+    .moviecontainer:nth-child(1) .containercontent {
         display: grid;
     }
 
-    .gridcontainer:nth-child(1) .gridcontent button {
+    .moviecontainer:nth-child(1) .containercontent button {
         width: 100%;
         font-size: 2em;
     }
 
-    .gridcontainer:nth-child(2) {
+    .moviecontainer:nth-child(2) {
         grid-column: span 1;
         display: grid;
         grid-template-rows: auto 1fr;
     }
 
-    .gridcontainer:nth-child(3) {
+    .moviecontainer:nth-child(3) {
         grid-column: span 1;
         display: grid;
         grid-template-rows: auto 1fr;
     }
 
-    .gridcontainer:nth-child(4) {
+    .moviecontainer:nth-child(4) {
         grid-column: span 1;
         grid-row-start: 2;
         display: grid;
@@ -264,7 +264,7 @@ p {
         grid-template-rows: auto 1fr;
     }
 
-    .gridcontainer:nth-child(5) {
+    .moviecontainer:nth-child(5) {
         grid-column: span 1;
         grid-row-start: 3;
         display: grid;
@@ -272,7 +272,7 @@ p {
         grid-template-rows: auto 1fr;
     }
 
-    .gridcontainer:nth-child(6) {
+    .moviecontainer:nth-child(6) {
         grid-column: span 1;
         grid-row-start: 3;
         display: grid;
@@ -309,27 +309,27 @@ p {
         width: 100%;
     }
 
-    .gridcontainer {
+    .moviecontainer {
         border: 2px solid black;
         box-shadow: 10px 10px 20px;
     }
 
-    .gridcontainer h1 {
+    .moviecontainer h1 {
         font-size: 2em;
     }
 
-    .gridcontainer p {
+    .moviecontainer p {
         font-size: 1.5em;
         margin-bottom: 16px;
     }
 
-    .gridcontainer img {
+    .moviecontainer img {
         width: 100%;
         height: 100%;
         object-fit: cover;
     }
 
-    .gridcontent {
+    .containercontent {
         padding: 16px;
         display: flex;
         flex-direction: column;
@@ -342,54 +342,54 @@ p {
         border-radius: 16px;
     }
 
-    .gridcontainer:nth-child(1) {
+    .moviecontainer:nth-child(1) {
         grid-column: span 1;
         display: grid;
         grid-template-rows: auto 1fr;
     }
 
-    .gridcontainer:nth-child(1) img {
+    .moviecontainer:nth-child(1) img {
         width: 100%;
         height: 100%;
         object-fit: cover;
     }
 
-    .gridcontainer:nth-child(1) .gridcontent {
+    .moviecontainer:nth-child(1) .containercontent {
         display: grid;
     }
 
-    .gridcontainer:nth-child(1) .gridcontent button {
+    .moviecontainer:nth-child(1) .containercontent button {
         width: 100%;
         font-size: 2em;
     }
 
-    .gridcontainer:nth-child(2) {
+    .moviecontainer:nth-child(2) {
         grid-column: span 1;
         grid-row-start: 2;
         display: grid;
     }
 
-    .gridcontainer:nth-child(3) {
+    .moviecontainer:nth-child(3) {
         grid-column: span 1;
         grid-row-start: 3;
         display: grid;
     }
 
-    .gridcontainer:nth-child(4) {
+    .moviecontainer:nth-child(4) {
         grid-column: span 1;
         grid-row-start: 4;
         display: grid;
         grid-template-columns: 1fr;
     }
 
-    .gridcontainer:nth-child(5) {
+    .moviecontainer:nth-child(5) {
         grid-column: span 1;
         grid-row-start: 5;
         display: grid;
         grid-template-columns: 1fr;
     }
 
-    .gridcontainer:nth-child(6) {
+    .moviecontainer:nth-child(6) {
         grid-column: span 1;
         grid-row-start: 6;
         display: grid;
