--- a/Task 2/sass.css
+++ b/Task 2/sass.css
@@ -88,7 +88,7 @@ body p {
 
 /* Hover state for the search button */
 .search:hover {
-  background-color: #4DCCBD;
+  background: linear-gradient(180deg, #4DCCBD, #070410);
   border: 2px solid #EEF36A;
   box-shadow: 2px 2px 10px #FFFFFF;
   color: #EEF36A;
@@ -155,7 +155,7 @@ body p {
 
 /* Hover state for the watch now button */
 .watchnow:hover {
-  background-color: #4DCCBD;
+  background: linear-gradient(180deg, #4DCCBD, #070410);
   border: 2px solid #EEF36A;
   box-shadow: 2px 2px 10px #FFFFFF;
   color: #EEF36A;
