--- a/Task 2/sass.scss
+++ b/Task 2/sass.scss
@@ -8,7 +8,7 @@ $yellow: #EEF36A;
 
 /* Mixin for theme styling, used on hover */
 @mixin theme($theme: LightBlue) {
-    background-color: $lightblue;
+    background: linear-gradient(180deg, $lightblue, $darkblue);
     border: 2px solid $yellow;
     box-shadow: 2px 2px 10px #FFFFFF;
     color: $yellow;
